--- a/templates/bulk_sms.html.twig
+++ b/templates/bulk_sms.html.twig
@@ -64,6 +64,7 @@
 
             {% include '@bolt/_partials/fields/textarea.html.twig' with {
                 'label': 'Text',
+                'maxlength': 1520,
                 'name': 'text',
                 'required': true,
             } %}
