--- a/templates/widget.html.twig
+++ b/templates/widget.html.twig
@@ -6,17 +6,17 @@
         <p>{{ extension.composerpackage.description }}</p>
 
         <p>
-            <a href='/bolt/file-edit/config?file=extensions/sms77-bolt.yaml'
+            <a href='/bolt/file-edit/config?file=extensions/seven-bolt.yaml'
                class='btn btn-secondary'>
                 <i class='fas fa-cog'></i> Config
             </a>
 
-            <a href='{{ url('sms77_bulk_sms') }}'
+            <a href='{{ url('seven_bulk_sms') }}'
                class='btn btn-secondary'>
                 <i class='fas fa-envelope'></i> Bulk SMS
             </a>
 
-            <a href='{{ url('sms77_bulk_voice') }}'
+            <a href='{{ url('seven_bulk_voice') }}'
                class='btn btn-secondary'>
                 <i class='fas fa-envelope'></i> Bulk Voice
             </a>
