--- a/templates/bulk_voice.html.twig
+++ b/templates/bulk_voice.html.twig
@@ -1,7 +1,7 @@
 {% extends '@bolt/_base/layout.html.twig' %}
 {% import '@bolt/_macro/_macro.html.twig' as macro %}
 
-{% block shoulder %}Sms77{% endblock shoulder %}
+{% block shoulder %}Seven{% endblock shoulder %}
 
 {% block title %}Bulk Voice{% endblock %}
 
@@ -11,9 +11,9 @@
     {% if apiKey is empty %}
         <h1>Missing API key. Please go to settings and set one.</h1>
     {% else %}
-        <form id='sms77_bulk_voice' method='post'>
+        <form id='seven_bulk_voice' method='post'>
             <input name='_csrf_token' type='hidden'
-                   value='{{ csrf_token('sms77_bulk_voice') }}'>
+                   value='{{ csrf_token('seven_bulk_voice') }}'>
 
             {% include '@bolt/_partials/fields/text.html.twig' with {
                 'label': 'From',
